# ai-track-news

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: m1-hourly.yml
config/: sources.yml  topic_rules.json
data/: README.md
data/manifests/2026-06/: 20260611T055058Z-live.json  20260611T060023Z-live.json  20260611T064945Z-live.json  20260611T080905Z-live.json  20260611T114932Z-live.json  20260611T162924Z-live.json  20260611T194645Z-live.json  20260611T221705Z-live.json  20260611T235635Z-live.json  20260612T050508Z-live.json  20260612T091354Z-live.json  20260612T123407Z-live.json  20260612T162833Z-live.json  20260612T192247Z-live.json  20260612T220129Z-live.json  20260612T235311Z-live.json  20260613T045304Z-live.json  20260613T083235Z-live.json  20260613T112506Z-live.json  20260613T142820Z-live.json  20260613T164831Z-live.json  20260613T184447Z-live.json  20260613T204124Z-live.json  20260613T221936Z-live.json  20260614T013742Z-live.json  20260614T065801Z-live.json  20260614T103243Z-live.json  20260614T130419Z-live.json  20260614T151855Z-live.json  20260614T174934Z-live.json  (+123 more)
docs/: design-contract-summary.md  schema-needs.md  source-validation-2026-06-11.md
pipeline/: __init__.py  config.py  fetch.py  llm.py  llm_smoke.py  normalize.py  parse.py  render_site.py  report_m1_health.py  run_m1.py  run_m2_experimental.py  storage.py
site/: 404.html  index.html
site/assets/: styles.css
site/data/: portal.json
site/sources/: index.html
tests/: test_llm.py  test_m1_health.py  test_m2_experimental.py  test_render_site.py
(+663 files in other folders)
