[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-track-news"
version = "0.1.0"
description = "M1 fetch-normalize-dedupe pipeline for AI Track News"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["pipeline*"]
exclude = ["config*", "data*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py39"
